--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-        <div class="logo">
-          <h1>Personal</h1>
+        <div class="logo"> 
+          <h1>Persona</h1>
         </div>
          <div class="menu"><i class="fa-solid fa-angles-left" id="menu2"></i></div>
         <nav class="nav" id="nav2">
