--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
         <div class="logo"> 
-          <h1>Persona</h1>
+          <h1>Personal</h1>
         </div>
          <div class="menu"><i class="fa-solid fa-angles-left" id="menu2"></i></div>
         <nav class="nav" id="nav2">
