--- a/index.html
+++ b/index.html
@@ -24,16 +24,67 @@
         <div class="close"><i class="fa-solid fa-circle-xmark" id="close1"></i></div>
         </nav>
     </header>
-    <div class="hero-section.container">
+    <div class="hero-section-container container">
       <div class="hero-text">
-        <p>THIS IS ME</p>
-        <h1>GABRIEL EFEVBERHA</h1>
+        <p>THIS IS ME</p><br>
+        <h1>GABRIEL EFEVBERHA</h1><br>
         <p>You will begin to realise why this skill is called programming<br>
-        with reference to website creating showing some ways to earn in the future.</p>
+        with reference to website creating showing some ways to earn in the future.</p><br>
+
+        <button>Discover Now</button>
       </div>
 
-     
+      <div class="hero-image">
+        <img src="./hero-img.png">
+      </div>
     </div>
+
+    <div class="container2">
+      <div class="image-content">
+         <img src="./about.png">
+      </div>
+
+      <div class="text-content">
+        <p>ABOUT ME</p><br>
+        <h1>PERSONAL DETAILS</h1><br>
+        <p>Here, I focus on a range of items and features that we use in life 
+          without giving them a second thought. such as Coca Cola.
+          Dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
+          minim veniam, quis nostrud exercitation ullamco.
+
+        </p><br>
+        <button class="hi-btn">VIEW FULL DETAILS</button>
+      </div>
+    </div>
+
+    <div class="text">
+      <h1>Our Latest Featured Projects</h1><br>
+      <p>Who are in extremely love with eco friendly system.</p>
+    </div>
+<div class="h">
+  <div class="box-card">
+    <div class="card">
+      <img src="./p1.png" >
+      <h2>pick the box</h2>
+      <a href="./Card Games/project.html">CLICK TO PLAY</a>
+    </div>
+
+    <div class="card">
+      <img src="./p2.png">
+      <h2>2D Vinyl Design</h2>
+      <p>vector</p>
+    </div>
+
+    <div class="card">
+      <img src="./p3.png">
+      <h2>Creative Poster Design</h2>
+      <p>Agency</p>
+    </div>
+</div><br>
+<div class="button"><button class="hi-btn2">VEIW MORE</button></div><br>
+</div>
+
       <script src="./index.js"></script>
   </body>
 </html>
